imported fonts in css

--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@
     <link rel="stylesheet" href="/style/main.css" />
     <title>G3 Architects</title>
   </head>
-  <body></body>
+  <body class="work-sans-font"></body>
 </html>
