--- a/index.html
+++ b/index.html
@@ -6,5 +6,32 @@
     <link rel="stylesheet" href="/style/main.css" />
     <title>G3 Architects</title>
   </head>
-  <body class="work-sans-font"></body>
+  <body class="work-sans-font">
+    <header>
+      <nav>
+        <div id="logo">G3 Architects</div>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact Us</a></li>
+          <li><a href="#">Login</a></li>
+        </ul>
+      </nav>
+      <section id="heroSection">
+        <div class="content">
+          <h1>
+            Brand New <br />
+            Group of Architects
+          </h1>
+          <p>
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </p>
+        </div>
+
+        <div id="heroImage"></div>
+      </section>
+    </header>
+  </body>
 </html>
