Hero section done and its responsive too!

--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
   </head>
   <body class="work-sans-font">
     <header>
-      <nav>
+      <nav class="container">
         <div id="logo">G3 Architects</div>
         <ul>
-          <li><a href="#">Home</a></li>
+          <li><a href="#" active>Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Contact Us</a></li>
           <li><a href="#">Login</a></li>
         </ul>
       </nav>
-      <section id="heroSection">
+      <section id="heroSection" class="container">
         <div class="content">
           <h1>
             Brand New <br />
@@ -28,9 +28,12 @@
             the majority have suffered alteration in some form, by injected
             humour, or randomised words which don't look even
           </p>
+          <button class="btn">Explore More</button>
         </div>
 
-        <div id="heroImage"></div>
+        <div id="heroImage">
+          <img src="images/banner.png" alt="3 Architects standing together" />
+        </div>
       </section>
     </header>
   </body>
