--- a/index.html
+++ b/index.html
@@ -58,6 +58,27 @@
           <button class="btn">Explore More</button>
         </div>
       </section>
+
+      <section id="features">
+        <div class="container">
+          <div class="text-content">
+            <div class="heading">
+              <div id="left-border">
+                <h2>Features you will <br />love & enjoy</h2>
+              </div>
+              <p>
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised words which don't look even
+              </p>
+            </div>
+            <div class="card-container"></div>
+          </div>
+          <div class="img-container">
+            <img src="images/architect.png" alt="" />
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
