--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/style/main.css" />
+    <link rel="stylesheet" href="./style/main.css" />
     <title>G3 Architects</title>
   </head>
   <body class="work-sans-font">
@@ -72,10 +72,47 @@
                 injected humour, or randomised words which don't look even
               </p>
             </div>
-            <div class="card-container"></div>
+            <div class="card-container">
+              <div class="cards">
+                <h3>Dexktop & Mobile Version</h3>
+                <p>
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majority have suffered alteration in some
+                  form, by injected humour, or randomised...........
+                </p>
+              </div>
+              <div class="cards">
+                <h3>Drag & Drop Builder</h3>
+                <p>
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majority have suffered alteration in some
+                  form, by injected humour, or randomised...........
+                </p>
+              </div>
+              <div class="cards">
+                <h3>Awesome Modern Design</h3>
+                <p>
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majority have suffered alteration in some
+                  form, by injected humour, or randomised...........
+                </p>
+              </div>
+              <div class="cards">
+                <h3>Super Easy to Edit</h3>
+                <p>
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majority have suffered alteration in some
+                  form, by injected humour, or randomised...........
+                </p>
+              </div>
+            </div>
           </div>
           <div class="img-container">
             <img src="images/architect.png" alt="" />
+            <div class="labeltext">
+              <div class="altH1">10+Year</div>
+              Experience
+            </div>
           </div>
         </div>
       </section>
