added some parts in the 4th section

--- a/index.html
+++ b/index.html
@@ -117,7 +117,16 @@
         </div>
       </section>
 
-      <section id="SomeFacts"></section>
+      <section id="SomeFacts" class="container">
+        <div class="heading">
+          <h2>Some Facts</h2>
+          <p>
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration.
+          </p>
+        </div>
+        <div class="cards-container"></div>
+      </section>
     </main>
   </body>
 </html>
