The fact cards section is now complete

--- a/index.html
+++ b/index.html
@@ -125,7 +125,28 @@
             the majority have suffered alteration.
           </p>
         </div>
-        <div class="cards-container"></div>
+        <div class="fact-cards-container">
+          <div class="fact-card">
+            <img src="./images/icons/ribon.png" alt="ribon image" />
+            <p class="fact-card-heading">54</p>
+            <p class="fact-card-text">Awards Winnings</p>
+          </div>
+          <div class="fact-card">
+            <img src="./images/icons/projects.png" alt="ribon image" />
+            <p class="fact-card-heading">1458</p>
+            <p class="fact-card-text">Project Finished</p>
+          </div>
+          <div class="fact-card">
+            <img src="./images/icons/customers.png" alt="ribon image" />
+            <p class="fact-card-heading">590</p>
+            <p class="fact-card-text">Clients Worked</p>
+          </div>
+          <div class="fact-card">
+            <img src="./images/icons/email.png" alt="ribon image" />
+            <p class="fact-card-heading">22578</p>
+            <p class="fact-card-text">Email Send</p>
+          </div>
+        </div>
       </section>
     </main>
   </body>
