--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -148,6 +148,31 @@
           </div>
         </div>
       </section>
+
+      <section id="sponspors">
+        <div class="container">
+          <div class="heading">
+            <h2>Our Sponspors</h2>
+            <p>
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration.
+            </p>
+          </div>
+          <div id="sponsporsLogo">
+            <img src="./images/sponsors/spotify.png" alt="" />
+            <img src="./images/sponsors/amazon.png" alt="" />
+            <img src="./images/sponsors/google.png" alt="" />
+            <img src="./images/sponsors/telerama.png" alt="" />
+            <img src="./images/sponsors/figma.png" alt="" />
+          </div>
+        </div>
+      </section>
     </main>
+
+    <footer>
+      <section class="container">
+        <p>All rights reserved copyright@2023 startup landing page design</p>
+      </section>
+    </footer>
   </body>
 </html>
